refactor: Minor code restructure before adding docker